displays welcome message

--- a/index.html
+++ b/index.html
@@ -19,7 +19,34 @@
 
 <body>
 
-    <h1> hello</h1>
+    <!-- Header -->
+
+    <div class="container">
+        <div class="row">
+            <div class="col-md-2" id="viewHScores">View Highscores</div>
+            <div class="col-md-2 ml-auto">Time: <span id="timer"></span></div>
+        </div>
+    </div>
+
+    <!-- end header -->
+
+    <!-- jumbotron -->
+
+    <div class="container">
+        <div class="jumbotron jumbotron-fluid text-center">
+            <div class="container">
+                <h1 class="display-4 mb-4">Coding Quiz Challenge</h1>
+                <p class="lead mb-4">Try to answer the following code-related questions with the time limit. Keep in mind
+                    that incorrect answers will penalize your scoretime by ten seconds!</p>
+                <button type="button" class="btn btn-primary btn-lg" id="start">Start Quiz</button>
+
+            </div>
+        </div>
+    </div>
+
+    <!-- end jumbotron -->
+
+
 
     <!-- JavaScript -->
 
