--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-2" id="viewHScores">View Highscores</div>
-            <div class="col-md-2 ml-auto">Time: <span id="timer"></span></div>
+            <div class="col-md-2 ml-auto">Time: <span id="timer">0</span></div>
         </div>
     </div>
 
@@ -32,11 +32,12 @@
 
     <!-- jumbotron -->
 
-    <div class="container">
+    <div class="container" id="welcomePage">
         <div class="jumbotron jumbotron-fluid text-center">
             <div class="container">
                 <h1 class="display-4 mb-4">Coding Quiz Challenge</h1>
-                <p class="lead mb-4">Try to answer the following code-related questions with the time limit. Keep in mind
+                <p class="lead mb-4">Try to answer the following code-related questions with the time limit. Keep in
+                    mind
                     that incorrect answers will penalize your scoretime by ten seconds!</p>
                 <button type="button" class="btn btn-primary btn-lg" id="start">Start Quiz</button>
 
