--- a/index.html
+++ b/index.html
@@ -56,6 +56,14 @@
                 </ol>
             </div>
 
+            <!-- input high scores -->
+            <div class="container" id="inputScore">
+                <h1 class="display-4 mb-4">Well done</h1>
+                <p class="lead mb-4">Your final score: <span id="score"></span></p>
+                <p class="lead mb-4">Enter initials: <input type="text " id="initials"></span></p>
+                <button type="button" class="btn btn-primary btn-lg" id="submitScore">Submit</button>
+            </div>
+            
         </div>
     </div>
 
