saves score input to local storage and goes back to welcome page

--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
             <div class="container" id="inputScore">
                 <h1 class="display-4 mb-4">Well done</h1>
                 <p class="lead mb-4">Your final score: <span id="score"></span></p>
-                <p class="lead mb-4">Enter initials: <input type="text " id="initials"></span></p>
-                <button type="button" class="btn btn-primary btn-lg" id="submitScore">Submit</button>
+                <p class="lead mb-4">Enter initials: <input type="text " id="initials"></p>
+                <button type="button" class="btn btn-primary btn-lg" id="submitInitials">Submit</button>
             </div>
-            
+
         </div>
     </div>
 
