High Scores page display high scores. Score is being tracked and updated

--- a/index.html
+++ b/index.html
@@ -64,6 +64,15 @@
                 <button type="button" class="btn btn-primary btn-lg" id="submitInitials">Submit</button>
             </div>
 
+            <!-- view high scores -->
+            <div class="container" id="highScores">
+                <ol id="scores">
+                </ol>
+                <button type="button" class="btn btn-primary btn-lg" id="goBack">Go Back</button>
+                <button type="button" class="btn btn-primary btn-lg" id="clearScores">Clear Scores</button>
+            </div>
+
+
         </div>
     </div>
 
