Reorganizes code and fixes typos for clearer code reading

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <p class="lead mb-4">Try to answer the following code-related questions with the time limit. Keep in
                     mind
                     that incorrect answers will penalize your scoretime by ten seconds!</p>
-                <button type="button" class="btn btn-primary btn-lg" id="start">Start Quiz</button>
+                <button type="button" class="btn btn-primary btn-lg" id="startQuiz">Start Quiz</button>
 
             </div>
 
