--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-md-2" id="viewHScores">View Highscores</div>
-            <div class="col-md-2 ml-auto">Time: <span id="timer">0</span></div>
+            <div class="col-md-4 h2" id="viewHScores">View Highscores</div>
+            <div class="col-md-2 ml-auto h2">Time: <span id="timer">0</span></div>
         </div>
     </div>
 
@@ -37,7 +37,7 @@
 
             <!-- welcome  -->
             <div class="container" id="welcome">
-                <h1 class="display-4 mb-4">Coding Quiz Challenge</h1>
+                <h1 class="h1 mb-4">Coding Quiz Challenge</h1>
                 <p class="lead mb-4">Try to answer the following code-related questions with the time limit. Keep in
                     mind
                     that incorrect answers will penalize your scoretime by ten seconds!</p>
@@ -47,18 +47,26 @@
 
             <!-- quiz -->
             <div class="container" id="quiz">
-                <h1 class="display-4 mb-4" id="question"></h1>
-                <ol id="answers">
-                    <li><button type="button" class="btn btn-primary btn-lg" id="1"></button></li>
-                    <li><button type="button" class="btn btn-primary btn-lg" id="2"></button></li>
-                    <li><button type="button" class="btn btn-primary btn-lg" id="3"></button></li>
-                    <li><button type="button" class="btn btn-primary btn-lg" id="4"></button></li>
-                </ol>
+                <h1 class="h1 mb-4" id="question"></h1>
+                <div class="container" id="answers">
+                    <div>
+                        <button type="button" class="btn btn-primary btn-lg mb-3" id="1"></button>
+                    </div>
+                    <div>
+                        <button type="button" class="btn btn-primary btn-lg mb-3" id="2"></button>
+                    </div>
+                    <div>
+                        <button type="button" class="btn btn-primary btn-lg mb-3" id="3"></button>
+                    </div>
+                    <div>
+                        <button type="button" class="btn btn-primary btn-lg mb-3" id="4"></button>
+                    </div>
+                </div>
             </div>
 
             <!-- input high scores -->
             <div class="container" id="inputScore">
-                <h1 class="display-4 mb-4">Well done</h1>
+                <h1 class="h1 mb-4">Well done!</h1>
                 <p class="lead mb-4">Your final score: <span id="score"></span></p>
                 <p class="lead mb-4">Enter initials: <input type="text " id="initials"></p>
                 <button type="button" class="btn btn-primary btn-lg" id="submitInitials">Submit</button>
@@ -66,7 +74,8 @@
 
             <!-- view high scores -->
             <div class="container" id="highScores">
-                <ol id="scores">
+                <h1 class="h1 mb-4 font-weigth-bold">Highscores</h1>
+                <ol class="h4 mb-4" id="scores">
                 </ol>
                 <button type="button" class="btn btn-primary btn-lg" id="goBack">Go Back</button>
                 <button type="button" class="btn btn-primary btn-lg" id="clearScores">Clear Scores</button>
