Questions are located in a separate js file

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
 
     <!-- JavaScript -->
-
+    <script src="assets/js/questions.js"></script>
     <script src="assets/js/code-quiz.js"></script>
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
