Adds margin and formats buttons for uniformity

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <!-- Header -->
 
-    <div class="container">
+    <div class="container mt-5">
         <div class="row">
             <div class="col-md-4 h2" id="viewHScores">View Highscores</div>
             <div class="col-md-2 ml-auto h2">Time: <span id="timer">0</span></div>
@@ -32,7 +32,7 @@
 
     <!-- jumbotron -->
 
-    <div class="container">
+    <div class="container mt-3">
         <div class="jumbotron jumbotron-fluid text-center">
 
             <!-- welcome  -->
@@ -50,16 +50,16 @@
                 <h1 class="h1 mb-4" id="question"></h1>
                 <div class="container" id="answers">
                     <div class="row">
-                        <button type="button" class="btn btn-primary btn-lg mb-3" id="1"></button>
+                        <button type="button" class="btn btn-primary btn-lg btn-block mb-3 text-left" id="1"></button>
                     </div>
                     <div class="row">
-                        <button type="button" class="btn btn-primary btn-lg mb-3" id="2"></button>
+                        <button type="button" class="btn btn-primary btn-lg btn-block mb-3 text-left" id="2"></button>
                     </div>
                     <div class="row">
-                        <button type="button" class="btn btn-primary btn-lg mb-3" id="3"></button>
+                        <button type="button" class="btn btn-primary btn-lg btn-block mb-3 text-left" id="3"></button>
                     </div>
                     <div class="row">
-                        <button type="button" class="btn btn-primary btn-lg mb-3" id="4"></button>
+                        <button type="button" class="btn btn-primary btn-lg btn-block mb-3 text-left" id="4"></button>
                     </div>
                 </div>
             </div>
